--- a/src/main/resources/assets/verdance/lang/en_us.json
+++ b/src/main/resources/assets/verdance/lang/en_us.json
@@ -9,6 +9,7 @@
   "block.verdance.mulberry_fence": "Mulberry Fence",
   "block.verdance.mulberry_fence_gate": "Mulberry Fence Gate",
   "block.verdance.mulberry_hanging_sign": "Mulberry Hanging Sign",
+  "block.verdance.mulberry_log": "Mulberry Log",
   "block.verdance.mulberry_planks": "Mulberry Planks",
   "block.verdance.mulberry_pressure_plate": "Mulberry Pressure Plate",
   "block.verdance.mulberry_sign": "Mulberry Sign",
@@ -17,7 +18,10 @@
   "block.verdance.mulberry_trapdoor": "Mulberry Trapdoor",
   "block.verdance.mulberry_wall_hanging_sign": "Mulberry Wall Hanging Sign",
   "block.verdance.mulberry_wall_sign": "Mulberry Wall Sign",
+  "block.verdance.mulberry_wood": "Mulberry Wood",
   "block.verdance.shrub": "Shrub",
+  "block.verdance.stripped_mulberry_log": "Stripped Mulberry Log",
+  "block.verdance.stripped_mulberry_wood": "Stripped Mulberry Wood",
   "block.verdance.white_stucco": "White Stucco",
   "block.verdance.white_stucco_stairs": "White Stucco Stairs",
   "block.verdance.white_stucco_slab": "White Stucco Slab",
