--- a/src/main/resources/assets/verdance/lang/en_us.json
+++ b/src/main/resources/assets/verdance/lang/en_us.json
@@ -29,6 +29,7 @@
 
   "item.verdance.cantaloupe_seeds": "Cantaloupe Seeds",
   "item.verdance.cantaloupe_slice": "Cantaloupe Slice",
+  "item.verdance.mulberry": "Mulberry",
   "item.verdance.music_disc_range": "Music Disc",
   "item.verdance.music_disc_range.desc": "Firch - Range",
   "item.verdance.disc_fragment_range": "Disc Fragment",
