Add mulberry sapling
Mulberry saplings are planted with mulberries

--- a/src/main/resources/assets/verdance/lang/en_us.json
+++ b/src/main/resources/assets/verdance/lang/en_us.json
@@ -12,6 +12,7 @@
   "block.verdance.mulberry_log": "Mulberry Log",
   "block.verdance.mulberry_planks": "Mulberry Planks",
   "block.verdance.mulberry_pressure_plate": "Mulberry Pressure Plate",
+  "block.verdance.mulberry_sapling": "Mulberry Sapling",
   "block.verdance.mulberry_sign": "Mulberry Sign",
   "block.verdance.mulberry_slab": "Mulberry Slab",
   "block.verdance.mulberry_stairs": "Mulberry Stairs",
