Finish Mulberry Boats

--- a/src/main/resources/assets/verdance/lang/en_us.json
+++ b/src/main/resources/assets/verdance/lang/en_us.json
@@ -31,6 +31,8 @@
   "item.verdance.cantaloupe_seeds": "Cantaloupe Seeds",
   "item.verdance.cantaloupe_slice": "Cantaloupe Slice",
   "item.verdance.mulberry": "Mulberry",
+  "item.verdance.mulberry_boat": "Mulberry Boat",
+  "item.verdance.mulberry_chest_boat": "Mulberry Chest Boat",
   "item.verdance.music_disc_range": "Music Disc",
   "item.verdance.music_disc_range.desc": "Firch - Range",
   "item.verdance.disc_fragment_range": "Disc Fragment",
