--- a/src/main/resources/assets/verdance/lang/en_us.json
+++ b/src/main/resources/assets/verdance/lang/en_us.json
@@ -9,6 +9,7 @@
   "block.verdance.mulberry_fence": "Mulberry Fence",
   "block.verdance.mulberry_fence_gate": "Mulberry Fence Gate",
   "block.verdance.mulberry_hanging_sign": "Mulberry Hanging Sign",
+  "block.verdance.mulberry_leaves": "Mulberry Leaves",
   "block.verdance.mulberry_log": "Mulberry Log",
   "block.verdance.mulberry_planks": "Mulberry Planks",
   "block.verdance.mulberry_pressure_plate": "Mulberry Pressure Plate",
