Update stucco blocks

--- a/src/main/resources/assets/verdance/lang/en_us.json
+++ b/src/main/resources/assets/verdance/lang/en_us.json
@@ -2,8 +2,20 @@
   "biome.verdance.shrublands": "Shrublands",
 
   "block.verdance.attached_cantaloupe_stem": "Attached Cantaloupe Stem",
+  "block.verdance.black_stucco": "Black Stucco",
+  "block.verdance.black_stucco_stairs": "Black Stucco Stairs",
+  "block.verdance.black_stucco_slab": "Black Stucco Slab",
+  "block.verdance.black_stucco_wall": "Black Stucco Wall",
   "block.verdance.cantaloupe": "Cantaloupe",
   "block.verdance.cantaloupe_stem": "Cantaloupe Stem",
+  "block.verdance.gray_stucco": "Gray Stucco",
+  "block.verdance.gray_stucco_stairs": "Gray Stucco Stairs",
+  "block.verdance.gray_stucco_slab": "Gray Stucco Slab",
+  "block.verdance.gray_stucco_wall": "Gray Stucco Wall",
+  "block.verdance.light_gray_stucco": "Light Gray Stucco",
+  "block.verdance.light_gray_stucco_stairs": "Light Gray Stucco Stairs",
+  "block.verdance.light_gray_stucco_slab": "Light Gray Stucco Slab",
+  "block.verdance.light_gray_stucco_wall": "Light Gray Stucco Wall",
   "block.verdance.mulberry_button": "Mulberry Button",
   "block.verdance.mulberry_door": "Mulberry Door",
   "block.verdance.mulberry_fence": "Mulberry Fence",
