Update mulberry forests

--- a/src/main/resources/assets/verdance/lang/en_us.json
+++ b/src/main/resources/assets/verdance/lang/en_us.json
@@ -1,4 +1,5 @@
 {
+  "biome.verdance.mulberry_forest": "Mulberry Forest",
   "biome.verdance.shrublands": "Shrublands",
 
   "block.verdance.attached_cantaloupe_stem": "Attached Cantaloupe Stem",
