Add potted mulberry saplings

--- a/src/main/resources/assets/verdance/lang/en_us.json
+++ b/src/main/resources/assets/verdance/lang/en_us.json
@@ -42,6 +42,7 @@
   "block.verdance.orange_stucco_stairs": "Orange Stucco Stairs",
   "block.verdance.orange_stucco_slab": "Orange Stucco Slab",
   "block.verdance.orange_stucco_wall": "Orange Stucco Wall",
+  "block.verdance.potted_mulberry_sapling": "Potted Mulberry Sapling",
   "block.verdance.red_stucco": "Red Stucco",
   "block.verdance.red_stucco_stairs": "Red Stucco Stairs",
   "block.verdance.red_stucco_slab": "Red Stucco Slab",
