cute bug sapling prototype

--- a/src/main/resources/assets/verdance/lang/en_us.json
+++ b/src/main/resources/assets/verdance/lang/en_us.json
@@ -55,7 +55,7 @@
   "block.verdance.white_stucco_stairs": "White Stucco Stairs",
   "block.verdance.white_stucco_slab": "White Stucco Slab",
   "block.verdance.white_stucco_wall": "White Stucco Wall",
-  "block.verdance.silk_worm_eggs": "Silk Worm Eggs",
+  "block.verdance.silkworm_eggs": "Silkworm Eggs",
 
   "item.verdance.cantaloupe_seeds": "Cantaloupe Seeds",
   "item.verdance.cantaloupe_slice": "Cantaloupe Slice",
