Add mulberry cabinet

--- a/src/main/resources/assets/verdance/lang/en_us.json
+++ b/src/main/resources/assets/verdance/lang/en_us.json
@@ -22,6 +22,7 @@
   "block.verdance.light_gray_stucco_slab": "Light Gray Stucco Slab",
   "block.verdance.light_gray_stucco_wall": "Light Gray Stucco Wall",
   "block.verdance.mulberry_button": "Mulberry Button",
+  "block.verdance.mulberry_cabinet": "Mulberry Cabinet",
   "block.verdance.mulberry_door": "Mulberry Door",
   "block.verdance.mulberry_fence": "Mulberry Fence",
   "block.verdance.mulberry_fence_gate": "Mulberry Fence Gate",
