Cantaloupe rework and Grilled Cantaloupe

--- a/src/main/resources/assets/verdance/lang/en_us.json
+++ b/src/main/resources/assets/verdance/lang/en_us.json
@@ -104,6 +104,7 @@
 
   "item.verdance.cantaloupe_seeds": "Cantaloupe Seeds",
   "item.verdance.cantaloupe_slice": "Cantaloupe Slice",
+  "item.verdance.grilled_cantaloupe_slice": "Grilled Cantaloupe Slice",
   "item.verdance.mulberry": "Mulberry",
   "item.verdance.mulberry_boat": "Mulberry Boat",
   "item.verdance.mulberry_chest_boat": "Mulberry Chest Boat",
