Finish up Cantaloupe

--- a/src/main/resources/assets/verdance/lang/en_us.json
+++ b/src/main/resources/assets/verdance/lang/en_us.json
@@ -105,6 +105,7 @@
   "item.verdance.cantaloupe_seeds": "Cantaloupe Seeds",
   "item.verdance.cantaloupe_slice": "Cantaloupe Slice",
   "item.verdance.grilled_cantaloupe_slice": "Grilled Cantaloupe Slice",
+  "item.verdance.cantaloupe_juice": "Cantaloupe Juice",
   "item.verdance.mulberry": "Mulberry",
   "item.verdance.mulberry_boat": "Mulberry Boat",
   "item.verdance.mulberry_chest_boat": "Mulberry Chest Boat",
@@ -117,6 +118,8 @@
 
   "entity.verdance.silk_moth": "Silk Moth",
   "entity.verdance.silkworm": "Silkworm",
+
+  "verdance.tooltip.cantaloupe_juice": "Refreshing Extinguish",
 
   "subtitles.verdance.block.cantaloupe.grow": "Fruit grows"
 }
