--- a/src/main/resources/assets/verdance/lang/en_us.json
+++ b/src/main/resources/assets/verdance/lang/en_us.json
@@ -120,7 +120,7 @@
   "entity.verdance.silk_moth": "Silk Moth",
   "entity.verdance.silkworm": "Silkworm",
 
-  "verdance.tooltip.cantaloupe_juice": "Refreshing Extinguish",
+  "verdance.tooltip.cantaloupe_juice": "Instant Fire Extinguish",
 
   "subtitles.verdance.block.cantaloupe.grow": "Fruit grows"
 }
