--- a/src/main/resources/assets/verdance/lang/en_us.json
+++ b/src/main/resources/assets/verdance/lang/en_us.json
@@ -136,6 +136,8 @@
   "entity.verdance.silk_moth": "Silk Moth",
   "entity.verdance.silkworm": "Silkworm",
 
+  "jukebox_song.verdance.range": "Firch - Range",
+
   "verdance.tooltip.cantaloupe_juice": "Instant Fire Extinguish",
 
   "subtitles.verdance.block.cantaloupe.grow": "Fruit grows"
