--- a/src/main/resources/assets/verdance/lang/en_us.json
+++ b/src/main/resources/assets/verdance/lang/en_us.json
@@ -1,138 +1,130 @@
 {
-  "biome.verdance.mulberry_forest": "Mulberry Forest",
+    "biome.verdance.mulberry_forest": "Mulberry Forest",
 
-  "block.verdance.attached_cantaloupe_stem": "Attached Cantaloupe Stem",
-  "block.verdance.black_cushion": "Black Cushion",
-  "block.verdance.black_stucco": "Black Stucco",
-  "block.verdance.black_stucco_stairs": "Black Stucco Stairs",
-  "block.verdance.black_stucco_slab": "Black Stucco Slab",
-  "block.verdance.black_stucco_wall": "Black Stucco Wall",
-  "block.verdance.brown_cushion": "Brown Cushion",
-  "block.verdance.brown_stucco": "Brown Stucco",
-  "block.verdance.brown_stucco_stairs": "Brown Stucco Stairs",
-  "block.verdance.brown_stucco_slab": "Brown Stucco Slab",
-  "block.verdance.brown_stucco_wall": "Brown Stucco Wall",
-  "block.verdance.cantaloupe": "Cantaloupe",
-  "block.verdance.cantaloupe_stem": "Cantaloupe Stem",
-  "block.verdance.gray_cushion": "Gray Cushion",
-  "block.verdance.gray_stucco": "Gray Stucco",
-  "block.verdance.gray_stucco_stairs": "Gray Stucco Stairs",
-  "block.verdance.gray_stucco_slab": "Gray Stucco Slab",
-  "block.verdance.gray_stucco_wall": "Gray Stucco Wall",
-  "block.verdance.light_gray_cushion": "Light Gray Cushion",
-  "block.verdance.light_gray_stucco": "Light Gray Stucco",
-  "block.verdance.light_gray_stucco_stairs": "Light Gray Stucco Stairs",
-  "block.verdance.light_gray_stucco_slab": "Light Gray Stucco Slab",
-  "block.verdance.light_gray_stucco_wall": "Light Gray Stucco Wall",
-  "block.verdance.mulberry_button": "Mulberry Button",
-  "block.verdance.mulberry_crate": "Mulberry Crate",
-  "block.verdance.mulberry_door": "Mulberry Door",
-  "block.verdance.mulberry_fence": "Mulberry Fence",
-  "block.verdance.mulberry_fence_gate": "Mulberry Fence Gate",
-  "block.verdance.mulberry_hanging_sign": "Mulberry Hanging Sign",
-  "block.verdance.mulberry_leaves": "Mulberry Leaves",
-  "block.verdance.flowering_mulberry_leaves": "Flowering Mulberry Leaves",
-  "block.verdance.mulberry_log": "Mulberry Log",
-  "block.verdance.mulberry_planks": "Mulberry Planks",
-  "block.verdance.mulberry_pressure_plate": "Mulberry Pressure Plate",
-  "block.verdance.mulberry_sapling": "Mulberry Sapling",
-  "block.verdance.mulberry_sign": "Mulberry Sign",
-  "block.verdance.mulberry_slab": "Mulberry Slab",
-  "block.verdance.mulberry_stairs": "Mulberry Stairs",
-  "block.verdance.mulberry_trapdoor": "Mulberry Trapdoor",
-  "block.verdance.mulberry_wall_hanging_sign": "Mulberry Wall Hanging Sign",
-  "block.verdance.mulberry_wall_sign": "Mulberry Wall Sign",
-  "block.verdance.mulberry_wood": "Mulberry Wood",
-  "block.verdance.orange_cushion": "Orange Cushion",
-  "block.verdance.orange_stucco": "Orange Stucco",
-  "block.verdance.orange_stucco_stairs": "Orange Stucco Stairs",
-  "block.verdance.orange_stucco_slab": "Orange Stucco Slab",
-  "block.verdance.orange_stucco_wall": "Orange Stucco Wall",
-  "block.verdance.potted_mulberry_sapling": "Potted Mulberry Sapling",
-  "block.verdance.red_cushion": "Red Cushion",
-  "block.verdance.red_stucco": "Red Stucco",
-  "block.verdance.red_stucco_stairs": "Red Stucco Stairs",
-  "block.verdance.red_stucco_slab": "Red Stucco Slab",
-  "block.verdance.red_stucco_wall": "Red Stucco Wall",
-  "block.verdance.stripped_mulberry_log": "Stripped Mulberry Log",
-  "block.verdance.stripped_mulberry_wood": "Stripped Mulberry Wood",
-  "block.verdance.white_cushion": "White Cushion",
-  "block.verdance.white_stucco": "White Stucco",
-  "block.verdance.white_stucco_stairs": "White Stucco Stairs",
-  "block.verdance.white_stucco_slab": "White Stucco Slab",
-  "block.verdance.white_stucco_wall": "White Stucco Wall",
-  "block.verdance.silkworm_eggs": "Silkworm Eggs",
+    "block.verdance.attached_cantaloupe_stem": "Attached Cantaloupe Stem",
+    "block.verdance.black_cushion": "Black Cushion",
+    "block.verdance.black_stucco": "Black Stucco",
+    "block.verdance.black_stucco_slab": "Black Stucco Slab",
+    "block.verdance.black_stucco_stairs": "Black Stucco Stairs",
+    "block.verdance.black_stucco_wall": "Black Stucco Wall",
+    "block.verdance.blue_cushion": "Blue Cushion",
+    "block.verdance.blue_stucco": "Blue Stucco",
+    "block.verdance.blue_stucco_slab": "Blue Stucco Slab",
+    "block.verdance.blue_stucco_stairs": "Blue Stucco Stairs",
+    "block.verdance.blue_stucco_wall": "Blue Stucco Wall",
+    "block.verdance.brown_cushion": "Brown Cushion",
+    "block.verdance.brown_stucco": "Brown Stucco",
+    "block.verdance.brown_stucco_slab": "Brown Stucco Slab",
+    "block.verdance.brown_stucco_stairs": "Brown Stucco Stairs",
+    "block.verdance.brown_stucco_wall": "Brown Stucco Wall",
+    "block.verdance.cantaloupe": "Cantaloupe",
+    "block.verdance.cantaloupe_stem": "Cantaloupe Stem",
+    "block.verdance.cyan_cushion": "Cyan Cushion",
+    "block.verdance.cyan_stucco": "Cyan Stucco",
+    "block.verdance.cyan_stucco_slab": "Cyan Stucco Slab",
+    "block.verdance.cyan_stucco_stairs": "Cyan Stucco Stairs",
+    "block.verdance.cyan_stucco_wall": "Cyan Stucco Wall",
+    "block.verdance.flowering_mulberry_leaves": "Flowering Mulberry Leaves",
+    "block.verdance.gray_cushion": "Gray Cushion",
+    "block.verdance.gray_stucco": "Gray Stucco",
+    "block.verdance.gray_stucco_slab": "Gray Stucco Slab",
+    "block.verdance.gray_stucco_stairs": "Gray Stucco Stairs",
+    "block.verdance.gray_stucco_wall": "Gray Stucco Wall",
+    "block.verdance.green_cushion": "Green Cushion",
+    "block.verdance.green_stucco": "Green Stucco",
+    "block.verdance.green_stucco_slab": "Green Stucco Slab",
+    "block.verdance.green_stucco_stairs": "Green Stucco Stairs",
+    "block.verdance.green_stucco_wall": "Green Stucco Wall",
+    "block.verdance.light_blue_cushion": "Light Blue Cushion",
+    "block.verdance.light_blue_stucco": "Light Blue Stucco",
+    "block.verdance.light_blue_stucco_slab": "Light Blue Stucco Slab",
+    "block.verdance.light_blue_stucco_stairs": "Light Blue Stucco Stairs",
+    "block.verdance.light_blue_stucco_wall": "Light Blue Stucco Wall",
+    "block.verdance.light_gray_cushion": "Light Gray Cushion",
+    "block.verdance.light_gray_stucco": "Light Gray Stucco",
+    "block.verdance.light_gray_stucco_slab": "Light Gray Stucco Slab",
+    "block.verdance.light_gray_stucco_stairs": "Light Gray Stucco Stairs",
+    "block.verdance.light_gray_stucco_wall": "Light Gray Stucco Wall",
+    "block.verdance.lime_cushion": "Lime Cushion",
+    "block.verdance.lime_stucco": "Lime Stucco",
+    "block.verdance.lime_stucco_slab": "Lime Stucco Slab",
+    "block.verdance.lime_stucco_stairs": "Lime Stucco Stairs",
+    "block.verdance.lime_stucco_wall": "Lime Stucco Wall",
+    "block.verdance.magenta_cushion": "Magenta Cushion",
+    "block.verdance.magenta_stucco": "Magenta Stucco",
+    "block.verdance.magenta_stucco_slab": "Magenta Stucco Slab",
+    "block.verdance.magenta_stucco_stairs": "Magenta Stucco Stairs",
+    "block.verdance.magenta_stucco_wall": "Magenta Stucco Wall",
+    "block.verdance.mulberry_button": "Mulberry Button",
+    "block.verdance.mulberry_crate": "Mulberry Crate",
+    "block.verdance.mulberry_door": "Mulberry Door",
+    "block.verdance.mulberry_fence": "Mulberry Fence",
+    "block.verdance.mulberry_fence_gate": "Mulberry Fence Gate",
+    "block.verdance.mulberry_hanging_sign": "Mulberry Hanging Sign",
+    "block.verdance.mulberry_leaves": "Mulberry Leaves",
+    "block.verdance.mulberry_log": "Mulberry Log",
+    "block.verdance.mulberry_planks": "Mulberry Planks",
+    "block.verdance.mulberry_pressure_plate": "Mulberry Pressure Plate",
+    "block.verdance.mulberry_sapling": "Mulberry Sapling",
+    "block.verdance.mulberry_sign": "Mulberry Sign",
+    "block.verdance.mulberry_slab": "Mulberry Slab",
+    "block.verdance.mulberry_stairs": "Mulberry Stairs",
+    "block.verdance.mulberry_trapdoor": "Mulberry Trapdoor",
+    "block.verdance.mulberry_wall_hanging_sign": "Mulberry Wall Hanging Sign",
+    "block.verdance.mulberry_wall_sign": "Mulberry Wall Sign",
+    "block.verdance.mulberry_wood": "Mulberry Wood",
+    "block.verdance.orange_cushion": "Orange Cushion",
+    "block.verdance.orange_stucco": "Orange Stucco",
+    "block.verdance.orange_stucco_slab": "Orange Stucco Slab",
+    "block.verdance.orange_stucco_stairs": "Orange Stucco Stairs",
+    "block.verdance.orange_stucco_wall": "Orange Stucco Wall",
+    "block.verdance.pink_cushion": "Pink Cushion",
+    "block.verdance.pink_stucco": "Pink Stucco",
+    "block.verdance.pink_stucco_slab": "Pink Stucco Slab",
+    "block.verdance.pink_stucco_stairs": "Pink Stucco Stairs",
+    "block.verdance.pink_stucco_wall": "Pink Stucco Wall",
+    "block.verdance.potted_mulberry_sapling": "Potted Mulberry Sapling",
+    "block.verdance.purple_cushion": "Purple Cushion",
+    "block.verdance.purple_stucco": "Purple Stucco",
+    "block.verdance.purple_stucco_slab": "Purple Stucco Slab",
+    "block.verdance.purple_stucco_stairs": "Purple Stucco Stairs",
+    "block.verdance.purple_stucco_wall": "Purple Stucco Wall",
+    "block.verdance.red_cushion": "Red Cushion",
+    "block.verdance.red_stucco": "Red Stucco",
+    "block.verdance.red_stucco_slab": "Red Stucco Slab",
+    "block.verdance.red_stucco_stairs": "Red Stucco Stairs",
+    "block.verdance.red_stucco_wall": "Red Stucco Wall",
+    "block.verdance.silkworm_eggs": "Silkworm Eggs",
+    "block.verdance.stripped_mulberry_log": "Stripped Mulberry Log",
+    "block.verdance.stripped_mulberry_wood": "Stripped Mulberry Wood",
+    "block.verdance.violet": "Violet",
+    "block.verdance.white_cushion": "White Cushion",
+    "block.verdance.white_stucco": "White Stucco",
+    "block.verdance.white_stucco_slab": "White Stucco Slab",
+    "block.verdance.white_stucco_stairs": "White Stucco Stairs",
+    "block.verdance.white_stucco_wall": "White Stucco Wall",
+    "block.verdance.yellow_cushion": "Yellow Cushion",
+    "block.verdance.yellow_stucco": "Yellow Stucco",
+    "block.verdance.yellow_stucco_slab": "Yellow Stucco Slab",
+    "block.verdance.yellow_stucco_stairs": "Yellow Stucco Stairs",
+    "block.verdance.yellow_stucco_wall": "Yellow Stucco Wall",
 
-  "block.verdance.yellow_cushion": "Yellow Cushion",
-  "block.verdance.yellow_stucco": "Yellow Stucco",
-  "block.verdance.yellow_stucco_stairs": "Yellow Stucco Stairs",
-  "block.verdance.yellow_stucco_slab": "Yellow Stucco Slab",
-  "block.verdance.yellow_stucco_wall": "Yellow Stucco Wall",
+    "entity.verdance.silk_moth": "Silk Moth",
+    "entity.verdance.silkworm": "Silkworm",
 
-  "block.verdance.lime_cushion": "Lime Cushion",
-  "block.verdance.lime_stucco": "Lime Stucco",
-  "block.verdance.lime_stucco_stairs": "Lime Stucco Stairs",
-  "block.verdance.lime_stucco_slab": "Lime Stucco Slab",
-  "block.verdance.lime_stucco_wall": "Lime Stucco Wall",
+    "item.verdance.cantaloupe_juice": "Cantaloupe Juice",
+    "item.verdance.cantaloupe_seeds": "Cantaloupe Seeds",
+    "item.verdance.cantaloupe_slice": "Cantaloupe Slice",
+    "item.verdance.grilled_cantaloupe_slice": "Grilled Cantaloupe Slice",
+    "item.verdance.mulberry": "Mulberry",
+    "item.verdance.mulberry_boat": "Mulberry Boat",
+    "item.verdance.mulberry_chest_boat": "Mulberry Chest Boat",
+    "item.verdance.silk_moth_spawn_egg": "Silk Moth Spawn Egg",
+    "item.verdance.silkworm_spawn_egg": "Silkworm Spawn Egg",
 
-  "block.verdance.green_cushion": "Green Cushion",
-  "block.verdance.green_stucco": "Green Stucco",
-  "block.verdance.green_stucco_stairs": "Green Stucco Stairs",
-  "block.verdance.green_stucco_slab": "Green Stucco Slab",
-  "block.verdance.green_stucco_wall": "Green Stucco Wall",
-
-  "block.verdance.cyan_cushion": "Cyan Cushion",
-  "block.verdance.cyan_stucco": "Cyan Stucco",
-  "block.verdance.cyan_stucco_stairs": "Cyan Stucco Stairs",
-  "block.verdance.cyan_stucco_slab": "Cyan Stucco Slab",
-  "block.verdance.cyan_stucco_wall": "Cyan Stucco Wall",
-
-  "block.verdance.light_blue_cushion": "Light Blue Cushion",
-  "block.verdance.light_blue_stucco": "Light Blue Stucco",
-  "block.verdance.light_blue_stucco_stairs": "Light Blue Stucco Stairs",
-  "block.verdance.light_blue_stucco_slab": "Light Blue Stucco Slab",
-  "block.verdance.light_blue_stucco_wall": "Light Blue Stucco Wall",
-
-  "block.verdance.blue_cushion": "Blue Cushion",
-  "block.verdance.blue_stucco": "Blue Stucco",
-  "block.verdance.blue_stucco_stairs": "Blue Stucco Stairs",
-  "block.verdance.blue_stucco_slab": "Blue Stucco Slab",
-  "block.verdance.blue_stucco_wall": "Blue Stucco Wall",
-
-  "block.verdance.purple_cushion": "Purple Cushion",
-  "block.verdance.purple_stucco": "Purple Stucco",
-  "block.verdance.purple_stucco_stairs": "Purple Stucco Stairs",
-  "block.verdance.purple_stucco_slab": "Purple Stucco Slab",
-  "block.verdance.purple_stucco_wall": "Purple Stucco Wall",
-
-  "block.verdance.magenta_cushion": "Magenta Cushion",
-  "block.verdance.magenta_stucco": "Magenta Stucco",
-  "block.verdance.magenta_stucco_stairs": "Magenta Stucco Stairs",
-  "block.verdance.magenta_stucco_slab": "Magenta Stucco Slab",
-  "block.verdance.magenta_stucco_wall": "Magenta Stucco Wall",
-
-  "block.verdance.pink_cushion": "Pink Cushion",
-  "block.verdance.pink_stucco": "Pink Stucco",
-  "block.verdance.pink_stucco_stairs": "Pink Stucco Stairs",
-  "block.verdance.pink_stucco_slab": "Pink Stucco Slab",
-  "block.verdance.pink_stucco_wall": "Pink Stucco Wall",
-
-  "item.verdance.cantaloupe_seeds": "Cantaloupe Seeds",
-  "item.verdance.cantaloupe_slice": "Cantaloupe Slice",
-  "item.verdance.grilled_cantaloupe_slice": "Grilled Cantaloupe Slice",
-  "item.verdance.cantaloupe_juice": "Cantaloupe Juice",
-  "item.verdance.mulberry": "Mulberry",
-  "item.verdance.mulberry_boat": "Mulberry Boat",
-  "item.verdance.mulberry_chest_boat": "Mulberry Chest Boat",
-  "item.verdance.silk_moth_spawn_egg": "Silk Moth Spawn Egg",
-  "item.verdance.silkworm_spawn_egg": "Silkworm Spawn Egg",
-
-  "entity.verdance.silk_moth": "Silk Moth",
-  "entity.verdance.silkworm": "Silkworm",
-
-  "subtitles.verdance.entity.silk_moth.idle": "Silk Moth chirps",
-  "subtitles.verdance.entity.silk_moth.hurt": "Silk Moth hurts",
-  "subtitles.verdance.entity.silk_moth.death": "Silk Moth dies",
-  "subtitles.verdance.entity.silkworm.hurt": "Silkworm hurts",
-  "subtitles.verdance.entity.silkworm.death": "Silkworm dies"
+    "subtitles.verdance.entity.silk_moth.death": "Silk Moth dies",
+    "subtitles.verdance.entity.silk_moth.hurt": "Silk Moth hurts",
+    "subtitles.verdance.entity.silk_moth.idle": "Silk Moth chirps",
+    "subtitles.verdance.entity.silkworm.death": "Silkworm dies",
+    "subtitles.verdance.entity.silkworm.hurt": "Silkworm hurts"
 }
