Add lang entry for Potted Violets

--- a/src/main/resources/assets/verdance/lang/en_us.json
+++ b/src/main/resources/assets/verdance/lang/en_us.json
@@ -84,6 +84,7 @@
     "block.verdance.pink_stucco_stairs": "Pink Stucco Stairs",
     "block.verdance.pink_stucco_wall": "Pink Stucco Wall",
     "block.verdance.potted_mulberry_sapling": "Potted Mulberry Sapling",
+    "block.verdance.potted_violet": "Potted Violet",
     "block.verdance.purple_cushion": "Purple Cushion",
     "block.verdance.purple_stucco": "Purple Stucco",
     "block.verdance.purple_stucco_slab": "Purple Stucco Slab",
