--- a/src/main/resources/assets/verdance/lang/en_us.json
+++ b/src/main/resources/assets/verdance/lang/en_us.json
@@ -1,4 +1,9 @@
 {
+    "advancements.verdance.husbandry.feeling_fresh.description": "Drink Cantaloupe Juice to extinguish yourself",
+    "advancements.verdance.husbandry.feeling_fresh.title": "Feeling Fresh!",
+    "advancements.verdance.husbandry.silk_touched.description": "Carefully collect Silkworm Eggs by using Silk Touch",
+    "advancements.verdance.husbandry.silk_touched.title": "Silk Touched",
+
     "biome.verdance.mulberry_forest": "Mulberry Forest",
 
     "block.verdance.attached_cantaloupe_stem": "Attached Cantaloupe Stem",
